formulario de contacto

--- a/index.html
+++ b/index.html
@@ -7,8 +7,32 @@
     <title>Web de Donna</title>
 </head>
 <body>
-   <h1>La web de Donna</h1> 
+   <h1>La web de Donna</h1>
+   <a href="./contacto.html">Mandarle un mensaje a Donna</a>
+   <!-- < nombre propiedad="valor" > </nombre>-->
+   <ul type="square">Cosas que rompió Donna
+       <li>Cortina de Baño</li>
+       <li>Botella de vidrio</li>
+       <li>Billetes</li>
+       <li>Peluches</li>
+       <li>Cosas varias</li>
+   </ul> 
+   <ol type="A" start="5" > Hechos importantes
+    <li>20 de enero: adopción de Donna</li>
+    <li>10 de abril: castración</li>
+    <li>31 de octubre: 1º cumpleaño</li>
+   </ol>
    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos exercitationem architecto quibusdam! Officiis harum a beatae fuga consequatur sed. Architecto unde voluptas nobis nulla quaerat dolor quos velit, eaque eveniet.</p>
-   <img src="./images/IMG_20210429_122446.jpg" alt="">
+  
+   <table> Habitan con Donna
+    <tr><!--table row--> <th>Nombre</th><th>Apellido</th><th>Edad</th> </tr>
+    <tr><td>Esteban</td><td>Piazza</td><td>29</td></tr>
+    <tr><td>Persona</td><td>Generica </td><td>30</td></tr>
+    <tr><td>Persona 2</td><td>Generica</td><td>20</td></tr>
+    <!--TD = table data // TH = table Header-->
+   </table>
+
+
+   <img src="./images/IMG_20210429_122446.jpg" alt="foto de Donna" width="50%">
 </body>
 </html>
