--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
     Email
     <input type="email">
     Cantidad de amor por Donna
-    <input type="range">
+    <input type="range" start="1">
     Es alumno de la catedra?
     <input type="radio">Si
     <input type="radio">No <br>
