agregado hoja de estilo

--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web de Donna</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-   <h1>La web de Donna</h1>
+   <h1 id="titulo-principal" >La web de Donna</h1>
    <a href="./contacto.html">Mandarle un mensaje a Donna</a>
    <!-- < nombre propiedad="valor" > </nombre>-->
    <ul type="square">Cosas que rompió Donna
-       <li>Cortina de Baño</li>
-       <li>Botella de vidrio</li>
-       <li>Billetes</li>
-       <li>Peluches</li>
-       <li>Cosas varias</li>
+       <li class="lista-desordenada">Cortina de Baño</li>
+       <li class="lista-desordenada">Botella de vidrio</li>
+       <li class="lista-desordenada">Billetes</li>
+       <li class="lista-desordenada">Peluches</li>
+       <li class="lista-desordenada">Cosas varias</li>
    </ul> 
    <ol type="A" start="5" > Hechos importantes
     <li>20 de enero: adopción de Donna</li>
@@ -31,7 +32,7 @@
     <tr><td>Persona 2</td><td>Generica</td><td>20</td></tr>
     <!--TD = table data // TH = table Header-->
    </table>
-
+   <h1>Otro H1</h1>
 
    <img src="./images/IMG_20210429_122446.jpg" alt="foto de Donna" width="50%">
 </body>
