--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Web de Donna</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
+<!-- esto es un comentario -->
 <body>
    <h1 id="titulo-principal" >La web de Donna</h1>
    <a href="./contacto.html">Mandarle un mensaje a Donna</a>
