--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <!-- esto es un comentario -->
 <body>
+    <img id="foto-body" src="./images/IMG_20210429_122446.jpg" alt="foto de Donna" width="50%">
    <h1 id="titulo-principal" >La web de Donna</h1>
    <a href="./contacto.html">Mandarle un mensaje a Donna</a>
    <!-- < nombre propiedad="valor" > </nombre>-->
@@ -35,6 +36,6 @@
    </table>
    <h1>Otro H1</h1>
 
-   <img src="./images/IMG_20210429_122446.jpg" alt="foto de Donna" width="50%">
+   
 </body>
 </html>
